2008-05-29  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (connection_combo_init): when creating a new adhoc network, only show
			existing Ad-Hoc 'shared' connections
		- (nma_wireless_dialog_get_connection): when creating a new adhoc
			network, set the connection's ip4 method to 'shared'

	* src/connection-editor/ce-page-ip4.glade
		- Add a new IPv4 method "Shared to other computers"

	* src/connection-editor/page-ip4.c
		- (method_changed): enable/disable DNS stuff as appropriate when the
			method changes
		- (populate_ui, ui_to_setting): handle the 'shared' method
		- (ce_page_ip4_new): call method_changed() to update widget sensitivity

2008-05-29  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (applet_get_default_active_connection): if the only active connection
			is an adhoc connection but it's not 'default' becuase it doesn't
			have a route the internet, show it's state anyway

2008-05-29  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_add_devices): only count wireless devices that are actually
			usable

2008-05-29  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wep-key.c
		- (ws_wep_key_new): Shared Key auth is not valid in Ad-Hoc mode, so
			disable it as a choice

2008-05-28  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
	  src/applet-dialogs.c
		- Make the new info dialog /stetic/

2008-05-28  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
	  src/wireless-dialog.h
	  src/applet.glade
		- Convert the wireless dialog into a subclass of GtkDialog
		- Add a "Connection" combo box and populate it with existing connections
			that apply to the operation being performed; it's populated with
			adhoc-create=True connections for "Create new...", populated with
			adhoc-create=False connections for "Connect to other...", and hidden
			when the applet is just asking for secrets.

	* src/applet-device-wireless.c
		- Handle new wireless dialog API

2008-05-28  Dan Williams  <dcbw@redhat.com>
