@@ -1,3 +1,15 @@
+2008-06-05  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Colin Walters <walters@verbum.org>  (gnome.org #534427)
+
+	* src/applet.c
+	  src/applet.h
+		- (applet_get_settings): add accessor for settings object
+
+	* src/applet-device-wireless.c
+		- Notify the user about available wireless networks if there is no
+			connection and there aren't any matching saved networks
+
 2008-05-29  Dan Williams  <dcbw@redhat.com>
 
 	* src/wireless-dialog.c
